feat: production RAG pipeline - confidence filtering, Cohere reranking, hallucination prevention